[package]
name = "location"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-client-ip = "0.4.1"
axum-extra = { version = "0.7.2", features = ["typed-routing"] }
chrono = "0.4.26"
csv = "1.2.2"
hex = "0.4.3"
mime_guess = "2.0.4"
rust-embed = { version = "6.8.1", features = ["compression", "mime-guess"] }
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
time = "0.3.20"
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tower = { version = "0.4.13", features = ["timeout"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "local-time"] }
zip = { version = "0.6.6", default-features = false }


[profile.release]
codegen-units = 1
strip = true
lto = true
