[package]
name = "location"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-client-ip = "0.4.2"
axum-extra = { version = "0.7.7", features = ["typed-routing"] }
chrono = "0.4.31"
csv = "1.3.0"
hex = "0.4.3"
mime_guess = "2.0.4"
rust-embed = { version = "6.8.1", features = ["compression", "mime-guess"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
time = "0.3.37"
tokio = { version = "1.34.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tower = { version = "0.4.13", features = ["timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }


[profile.release]
codegen-units = 1
strip = true
lto = true
