[package]
name = "location"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
axum-client-ip = "0.7.0"
axum-extra = { version = "0.10.0", features = ["typed-routing"] }
chrono = "0.4.39"
csv = "1.3.1"
hex = "0.4.3"
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["compression", "mime-guess"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = "0.3.37"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
tower = { version = "0.5.2", features = ["timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }


[profile.release]
codegen-units = 1
strip = true
lto = true
